--- a/src/components/Dashboard/styles.module.scss
+++ b/src/components/Dashboard/styles.module.scss
@@ -7,3 +7,13 @@
   display: flex;
   justify-content: space-between;
 }
+
+.rowCont {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+
+.textCenter {
+  text-align: center;
+}
