--- a/src/components/Dashboard/styles.module.scss
+++ b/src/components/Dashboard/styles.module.scss
@@ -17,3 +17,42 @@
 .textCenter {
   text-align: center;
 }
+
+.card {
+  padding: 10px;
+  border: 1px solid lightgrey;
+  width: 200px;
+  height: 100px;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+  p {
+    font-size: 18px;
+    text-align: center;
+    text-transform: capitalize;
+  }
+  a {
+    display: none;
+  }
+  &:hover {
+    a {
+      display: block;
+    }
+  }
+}
+
+.action {
+  color: red;
+}
+
+.cardsCont {
+  display: flex;
+  gap: 20px;
+  margin-top: 60px;
+  justify-content: center;
+  cursor: pointer;
+  flex-wrap: wrap;
+}
