--- a/src/components/ViewCategory/styles.module.scss
+++ b/src/components/ViewCategory/styles.module.scss
@@ -9,3 +9,11 @@
   flex-wrap: wrap;
   margin-top: 30px;
 }
+
+.modalContent {
+  display: flex;
+  flex-direction: column;
+  button {
+    margin-top: 20px;
+  }
+}
