delete password functionality

--- a/src/components/PasswordCard/styles.module.scss
+++ b/src/components/PasswordCard/styles.module.scss
@@ -35,6 +35,11 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
+}
+
+.actions {
+  display: flex;
+  gap: 5px;
   svg {
     cursor: pointer;
   }
